Fixed bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,11 @@ table {
 
 #container {
     width: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     background-color: var(--main-bg);
-    padding-top: 5%;
-    padding-bottom: 5%;
+    align-items: center;
 }
 
 #card {
@@ -68,6 +68,9 @@ table {
     border-radius: 15px;
     -webkit-box-shadow: 0px 6px 17px 10px #09121F; 
     box-shadow: 0px 6px 17px 10px #09121F;
+    width: fit-content;
+    block-size: fit-content;
+
 }
 
 #image-nft {
